fix(ui5-table): border visibility on firefox (compat) (#13000)
There is a known issue in Firefox where borders are not visible if a table row or table cell has `position: relative` (see  https://bugzilla.mozilla.org/show_bug.cgi?id=688556). The `relative` positioning is required to correctly display the focus state over the table row and any associated pop-in content. This PR replaces the border with a linear gradient to achieve the same visual effect.

Fixes: https://github.com/UI5/webcomponents/issues/11330

--- a/packages/compat/src/themes/Table.css
+++ b/packages/compat/src/themes/Table.css
@@ -28,9 +28,13 @@ table {
 }
 
 .ui5-table-header-row-navigated {
-    width: 0.1875rem;
-    background: var(--sapList_HeaderBackground);
-    vertical-align: middle;
+	width: 0.1875rem;
+	vertical-align: middle;
+	/* Workaround for known issue with Firefox where table row or cell has position: relative;
+	https://bugzilla.mozilla.org/show_bug.cgi?id=688556 */
+	background-image: linear-gradient(180deg,
+			var(--sapList_HeaderBackground) calc(100% - var(--ui5_table_header_row_border_width)),
+			var(--ui5_table_header_row_border_bottom_color) calc(100% - var(--ui5_table_header_row_border_width)));
 }
 
 .ui5-table-header-row {
@@ -39,7 +43,11 @@ table {
 	font-family: var(--sapFontFamily);
 	font-size: var(--sapFontSize);
 	font-weight: var(--ui5_table_header_row_font_weight);
-	border-bottom: var(--ui5_table_header_row_border_width) solid var(--ui5_table_header_row_border_bottom_color);
+	/* Workaround for known issue with Firefox where table row or cell has position: relative;
+	https://bugzilla.mozilla.org/show_bug.cgi?id=688556 */
+	background-image: linear-gradient(180deg,
+			var(--sapList_HeaderBackground) calc(100% - var(--ui5_table_header_row_border_width)),
+			var(--ui5_table_header_row_border_bottom_color) calc(100% - var(--ui5_table_header_row_border_width)));
 }
 
 .ui5-table-header-row:focus {
@@ -88,10 +96,6 @@ tr {
 	position: sticky;
 	top: 0;
 	z-index: 98;
-}
-
-th {
-	background: var(--sapList_HeaderBackground);
 }
 
 .ui5-table-focusarea {
